fixed whitespace in safari FIIORG-130

--- a/_static/src/assets/scss/objects/layout/_viewWindow.scss
+++ b/_static/src/assets/scss/objects/layout/_viewWindow.scss
@@ -86,6 +86,8 @@ Layout for paneled views
     }
 
     .viewWindow-panel_feature {
+        width: calc(33.333% + 1px); // fix white space on right
+        margin-right: -1px;
         display: block;
         z-index: 1;
     }
